# N3-lite

./: .gitignore  CMakeLists.txt  output.sh  sdkconfig
docs/: N3Lite_CommHAL_Redesign_v1.0.md  N3Lite_CommHAL_Redesign_v1.1.md  N3Lite_MeterHAL_Redesign_v1.0.md  N3Lite_MeterHAL_Redesign_v1.1.md  软件开发文档.md
main/: AllocationController.c  AllocationController.h  BL0942Meter.c  BL0942Meter.h  BL0942MeterImpl.c  BLEManager.c  BLEManager.h  CEvent.c  CEvent.h  CMakeLists.txt  CTimer.c  CTimer.h  ChargingStation.h  ChargingStationManager.c  ChargingStationManager.h  ChargingStationManagerController.c  ChargingStationManagerController.h  ConfigManager.c  ConfigManager.h  ConfigManagerController.c  ConfigManagerController.h  Crc16Xom.c  Crc16Xom.h  DeBug.c  DeBug.h  DefaultCommImpl.c  DefaultCommImpl.h  GPIOManager.c  GPIOManager.h  HexUtils.c  HexUtils.h  HwTimer.c  HwTimer.h  ICommPlatform.h  IMeter.h  OTAManager.c  OTAManager.h  OrderStorage.c  OrderStorage.h  PlcAtcmd3121.c  (+33 more)
test/: CMakeLists.txt  MockMeterImpl.c  MockMeterImpl.h  test_allocation_controller.c
test/stubs/: stub_cevent.c  stub_cevent.h  stub_charging_station_mgr.c  stub_charging_station_mgr.h  stub_freertos.c  stub_freertos.h  stub_gpio_manager.c  stub_gpio_manager.h  stub_misc.c
